Prepare WIP page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ángela G. V.</title>
+</head>
+<body>
+  <div class="wip">
+    <div class="wip-title">In the making...</div>
+    <div class="wip-subtitle">Good things take time. 😉</div>
+  </div>
+
+  <style>
+    body {
+      background-color: #faf4ee;
+    }
+
+    .wip {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: system-ui, sans-serif;
+    }
+
+    .wip-title {
+      font-size: 64px;
+      color: #222;
+    }
+
+    .wip-subtitle {
+      font-size: 18px;
+      color: #777;
+    }
+  </style>
+</body>
+</html>
