Progress with intro, services and tools sections

--- a/index.html
+++ b/index.html
@@ -9,22 +9,118 @@
 <body>
   <section class="intro">
     <div class="intro-content centered">
-      <img class="intro-portrait" alt="Ángela's portrait" width="205" height="205" src="./portrait.jpg">
+      <div class="intro-portrait" style="width: 205px; height: 205px"></div>
       <div class="intro-text">
         <h1 class="intro-title">
           Howdy, I'm Ángela.
           <span style="display: inline-block; transform: rotate(-30deg)">🖐🏻</span>
         </h1>
         <p class="intro-description">
-          A <span class="highlighted">professional translator</span> something something.
+          A <b>professional translator</b> something something.
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, ad culpa! Illum, aliquam ratione aut id consequuntur optio nesciunt voluptatibus laboriosam molestiae iure pariatur veritatis ad sit laborum architecto minus.
         </p>
+        <div class="intro-links">
+          <a href="#">Contact</a>
+          <span>·</span>
+          <a href="#">CV</a>
+          <span>·</span>
+          <a href="https://linkedin.com/in/%C3%A1ngela-gra%C3%B1a-varela-90a27090">LinkedIn</a>
+          <span>·</span>
+          <a href="https://twitter.com/angela_g_varela">Twitter</a>
+        </div>
       </div>
     </div>
 
     <svg class="intro-waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#f4f2f3" fill-opacity="1" d="M0,160L60,160C120,160,240,160,360,170.7C480,181,600,203,720,213.3C840,224,960,224,1080,218.7C1200,213,1320,203,1380,197.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
     </svg>
+  </section>
+
+  <section class="services">
+    <h2>Here are the services I provide</h2>
+    <div class="services-content">
+      <ul class="services-titles">
+        <li>Translation</li>
+        <li>Editing</li>
+        <li>Copywriting</li>
+        <li>Transcreation</li>
+      </ul>
+      <ul class="services-descriptions">
+        <li>Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
+        <li>Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
+        <li>Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
+        <li>Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="tools">
+    <h2>These are some of the tools I've used</h2>
+    <ul class="tools-list">
+      <li>
+        <a target="_blank" href="https://adobe.com/products/photoshop.html">
+          <img height="22" alt="Adobe Photoshop's logo" src="./photoshop-logo.svg">
+          Photoshop
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://adobe.com/products/indesign.html">
+          <img height="22" alt="Adobe InDesign's logo" src="./indesign-logo.svg">
+          InDesign
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://adobe.com/products/illustrator.html">
+          <img height="22" alt="Adobe Illustrator's logo" src="./illustrator-logo.svg">
+          Illustrator
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://asana.com">
+          <img height="22" alt="Asana's logo" src="./asana-logo.svg">
+          Asana
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://buffer.com">
+          <img height="22" alt="Buffer's logo" src="buffer-logo.svg">
+          Buffer
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://facebook.com/creatorstudio">
+          <img height="22" alt="Facebook Creator Studio's logo" class="creator-studio-logo" src="creator-studio-logo.png">
+          Creator Studio
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://memoq.com">
+          <img height="24" alt="memoQ's logo" src="memoq-logo.svg">
+          memoQ
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="education">
+    <!-- "If you are wondering, I got my education from" on top, bullets with dates and titles below, connected with arrows, with Erasmus indented further -->
+    <!-- Degree, Erasmus, Masters -->
+  </section>
+
+  <section class="courses">
+    <!-- "And I intend to keep learning, so Ive also done" on top, bullets with dates and titles below, connected with arrows -->
+    <!-- RAE, AulaSic (romantic translation, subtitling) -->
+  </section>
+
+  <section class="experience">
+    <!-- NF volunteer, communications manager, translator -->
+  </section>
+
+  <!-- <section class="hobbies"></section> -->
+  <!-- <section class="values">e.g. attention to detail, good vs. fast work...</section> -->
+
+  <section class="contact">
+    <!-- "Reach out!" with text on the left, form with email and content on the right (nested translucid boxes) -->
   </section>
 
   <section class="wip">
@@ -42,6 +138,30 @@
       overflow-x: hidden;
     }
 
+    a {
+      text-decoration: none;
+    }
+
+    b {
+      font-weight: 500;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    section:not(.intro) {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 16px;
+    }
+
+    section h2 {
+      font-weight: 400;
+    }
+
     .centered {
       position: absolute;
       top: 50%;
@@ -49,13 +169,9 @@
       transform: translate(-50%, -50%);
     }
 
-    .highlighted {
-      font-weight: 500;
-    }
-
     .intro {
       height: 100vh;
-      background-image: linear-gradient(#b57e79, #5c2a2e);
+      background-image: linear-gradient(#412565, #ab6bb0);
       position: relative;
       overflow: hidden;
     }
@@ -70,8 +186,8 @@
       height: 300%;
       transform: rotate(30deg);
       background-image:
-        radial-gradient(#b57e7911 20%, transparent 50%),
-        radial-gradient(#b57e7911 20%, transparent 50%);
+        radial-gradient(#ab6bb011 20%, transparent 50%),
+        radial-gradient(#ab6bb011 20%, transparent 50%);
       background-size: 5px 5px;
     }
 
@@ -85,8 +201,8 @@
     .intro-content {
       display: flex;
       flex-direction: row;
-      z-index: 1;
       padding-bottom: 100px;
+      z-index: 1;
     }
 
     .intro-text {
@@ -116,6 +232,121 @@
       text-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
     }
 
+    .intro-links {
+      margin-top: 20px;
+    }
+
+    .intro-links * {
+      color: white;
+      text-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+    }
+
+    .intro-links *:not(:last-child) {
+      margin-right: 16px;
+    }
+
+    .intro-links a {
+      opacity: 0.5;
+    }
+
+    .intro-links a:hover {
+      opacity: 1;
+    }
+
+    .services-content {
+      display: flex;
+      flex-direction: row;
+    }
+    
+    .services-titles {
+      border-right: 2px solid #ab6bb044;
+      margin-right: 12px;
+    }
+
+    .services-titles li {
+      cursor: pointer;
+      padding: 8px 12px 8px 16px;
+      text-align: right;
+      font-size: 18px;
+      font-weight: 500;
+      opacity: 0.5;
+      border-radius: 50px 0 0 50px;
+    }
+
+    .services-titles li:hover {
+      opacity: 0.75;
+      background-color: #ab6bb022;
+    }
+
+    .services-titles li.selected {
+      opacity: 1;
+      background-color: #ab6bb044;
+    }
+
+    .services-descriptions {
+      padding: 4px 0;
+    }
+
+    .services-descriptions li {
+      line-height: 160%;
+      font-size: 17px;
+    }
+
+    .services-descriptions li:not(.selected) {
+      display: none;
+    }
+
+    .tools-list {
+      display: grid;
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+      gap: 12px;
+    }
+
+    @media (max-width: 750px) {
+      .tools-list {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
+
+    @media (max-width: 550px) {
+      .tools-list {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+    }
+
+    @media (max-width: 370px) {
+      .tools-list {
+        grid-template-columns: auto;
+      }
+    }
+
+    .tools-list li a {
+      display: inline-block;
+      width: 100%;
+      padding: 12px 0;
+      text-align: center;
+      font-size: 15px;
+      color: #555;
+      background-color: #eaeaea;
+      border-radius: 6px;
+      filter: grayscale(100%);
+    }
+
+    .tools-list li a:hover {
+      filter: none;
+      color: #000;
+      background-color: #e0e0e0;
+    }
+
+    .tools-list li a img {
+      vertical-align: -6px;
+      margin-right: 4px;
+    }
+
+    .creator-studio-logo {
+      border-radius: 5px;
+    }
+
     .wip {
       height: 100vh;
       position: relative;
@@ -131,5 +362,23 @@
       color: #777;
     }
   </style>
+  <script>
+    const servicesTitles = Array.from(document.querySelectorAll('.services-titles li'))
+    const servicesDescription = Array.from(document.querySelectorAll('.services-descriptions li'))
+
+    servicesTitles[0].classList.add('selected')
+    servicesDescription[0].classList.add('selected')
+
+    servicesTitles.forEach((title, titleIdx) => {
+      title.addEventListener('click', () => {
+        for (let i = 0; i < servicesTitles.length; ++i) {
+          servicesTitles[i].classList.remove('selected')
+          servicesDescription[i].classList.remove('selected')
+        }
+        servicesTitles[titleIdx].classList.add('selected')
+        servicesDescription[titleIdx].classList.add('selected')
+      })
+    })
+  </script>
 </body>
 </html>
