Open social media links in new tabs

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <span>·</span>
           <a href="#">CV</a>
           <span>·</span>
-          <a href="https://linkedin.com/in/%C3%A1ngela-gra%C3%B1a-varela-90a27090">LinkedIn</a>
+          <a target="_blank" href="https://linkedin.com/in/%C3%A1ngela-gra%C3%B1a-varela-90a27090">LinkedIn</a>
           <span>·</span>
-          <a href="https://twitter.com/angela_g_varela">Twitter</a>
+          <a target="_blank" href="https://twitter.com/angela_g_varela">Twitter</a>
         </div>
       </div>
     </div>
