--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <path fill-opacity="1" d="M0,0L80,16C160,32,320,64,480,64C640,64,800,32,960,26.7C1120,21,1280,43,1360,53.3L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
     </svg>
     <!-- "Reach out!" with text on the left, form with email and content on the right (nested translucid boxes) -->
-    <div class="outro-content">
+    <div class="outro-content centered">
       <div class="contact-area">
         <div class="contact-side">
           <h2><span class="contact-title-content">Reach out! <span class="emoji">✍️</span></span></h2>
@@ -394,18 +394,17 @@
       text-align: right;
       font-size: 18px;
       font-weight: 500;
-      opacity: 0.5;
       border-radius: 50px 0 0 50px;
+      color: #777;
     }
 
     .services-titles li:hover {
-      opacity: 0.75;
       background-color: #ab6bb022;
     }
 
     .services-titles li.selected {
-      opacity: 1;
       background-color: #ab6bb044;
+      color: #111;
     }
 
     .services-descriptions {
@@ -460,7 +459,7 @@
     .tools-list li a:hover {
       filter: none;
       color: #111;
-      background-color: #41256522;
+      background-color: #ab6bb022;
     }
 
     .tools-list li a img {
@@ -550,16 +549,17 @@
     }
 
     .outro {
-      height: 620px;
+      height: 95vh;
       margin-top: 100px;
       background-image: linear-gradient(#ab6bb0, #412565);
+      position: relative;
     }
 
     .outro .contact-area {
       display: flex;
       flex-direction: row;
-      width: 600px;
-      margin: 100px auto;
+      width: 700px;
+      margin-top: 50px;
       color: #eee;
       text-shadow: 0 1px 5px rgb(0 0 0 / 40%);
     }
