--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
         </div>
       </div>
     </div>
+    <small class="small-print">
+      Website made with love ♥️ by yours truly and me husband
+    </small>
   </section>
 
   <style>
@@ -559,7 +562,7 @@
       display: flex;
       flex-direction: row;
       width: 700px;
-      margin-top: 50px;
+      margin-top: 25px;
       color: #eee;
       text-shadow: 0 1px 5px rgb(0 0 0 / 40%);
     }
@@ -668,6 +671,17 @@
     .outro .contact-result.active {
       opacity: 1;
       transition: opacity 0.2s;
+    }
+
+    .outro .small-print {
+      display: block;
+      width: 100vw;
+      text-align: center;
+      position: absolute;
+      bottom: 32px;
+      opacity: 0.65;
+      color: #fff;
+      text-shadow: 0 1px 5px rgb(0 0 0 / 40%);
     }
   </style>
   <script>
