fix submit button style

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 
     #contact > button[type=submit]:active {
       text-shadow: none;
-      background-color: rgb(255 255 255 / 25%);
+      background-color: rgb(255 255 255 / 25%) !important;
     }
 
     .outro .contact-result {
