fix bugs related to bilingual system

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, ad culpa! Illum, aliquam ratione aut id consequuntur optio nesciunt voluptatibus laboriosam molestiae iure pariatur veritatis ad sit laborum architecto minus.
           </p>
           <div class="intro-links">
-            <a href="#contact">Contact</a>
+            <a href="#contact-form">Contact</a>
             <span>·</span>
             <a href="#">CV</a>
             <span>·</span>
@@ -43,16 +43,16 @@
       <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇🏻‍♀️</span></h2>
       <div class="services-content">
         <ul class="services-titles">
-          <li tabindex="0" aria-describedby="translation-desc">Translation</li>
-          <li tabindex="0" aria-describedby="editing-desc">Editing</li>
-          <li tabindex="0" aria-describedby="copywriting-desc">Copywriting</li>
-          <li tabindex="0" aria-describedby="transcreation-desc">Transcreation</li>
+          <li tabindex="0" aria-describedby="translation-desc-en">Translation</li>
+          <li tabindex="0" aria-describedby="editing-desc-en">Editing</li>
+          <li tabindex="0" aria-describedby="copywriting-desc-en">Copywriting</li>
+          <li tabindex="0" aria-describedby="transcreation-desc-en">Transcreation</li>
         </ul>
         <ul class="services-descriptions">
-          <li id="translation-desc">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
-          <li id="editing-desc">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
-          <li id="copywriting-desc">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
-          <li id="transcreation-desc">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
+          <li id="translation-desc-en">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
+          <li id="editing-desc-en">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
+          <li id="copywriting-desc-en">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
+          <li id="transcreation-desc-en">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
         </ul>
       </div>
     </section>
@@ -207,11 +207,11 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
           </div>
           <div class="contact-main">
-            <form id="contact">
-              <label for="contact-from">Email</label>
-              <input id="contact-from" type="email" required>
-              <label for="contact-body">Message</label>
-              <textarea id="contact-body" rows="10" required></textarea>
+            <form class="contact-form">
+              <label for="contact-from-en">Email</label>
+              <input id="contact-from-en" type="email" required>
+              <label for="contact-body-en">Message</label>
+              <textarea id="contact-body-en" rows="10" required></textarea>
               <button type="submit">
                 <div class="contact-loader" hidden></div>
                 <span class="submit-text">Send</span>
@@ -244,7 +244,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, ad culpa! Illum, aliquam ratione aut id consequuntur optio nesciunt voluptatibus laboriosam molestiae iure pariatur veritatis ad sit laborum architecto minus.
           </p>
           <div class="intro-links">
-            <a href="#contact">Contact</a>
+            <a href="#contact-form">Contact</a>
             <span>·</span>
             <a href="#">CV</a>
             <span>·</span>
@@ -264,16 +264,16 @@
       <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇🏻‍♀️</span></h2>
       <div class="services-content">
         <ul class="services-titles">
-          <li tabindex="0" aria-describedby="translation-desc">Translation</li>
-          <li tabindex="0" aria-describedby="editing-desc">Editing</li>
-          <li tabindex="0" aria-describedby="copywriting-desc">Copywriting</li>
-          <li tabindex="0" aria-describedby="transcreation-desc">Transcreation</li>
+          <li tabindex="0" aria-describedby="translation-desc-es">Translation</li>
+          <li tabindex="0" aria-describedby="editing-desc-es">Editing</li>
+          <li tabindex="0" aria-describedby="copywriting-desc-es">Copywriting</li>
+          <li tabindex="0" aria-describedby="transcreation-desc-es">Transcreation</li>
         </ul>
         <ul class="services-descriptions">
-          <li id="translation-desc">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
-          <li id="editing-desc">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
-          <li id="copywriting-desc">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
-          <li id="transcreation-desc">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
+          <li id="translation-desc-es">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
+          <li id="editing-desc-es">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
+          <li id="copywriting-desc-es">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
+          <li id="transcreation-desc-es">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
         </ul>
       </div>
     </section>
@@ -428,11 +428,11 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
           </div>
           <div class="contact-main">
-            <form id="contact">
+            <form class="contact-form">
               <label for="contact-from">Email</label>
-              <input id="contact-from" type="email" required>
+              <input id="contact-from-es" type="email" required>
               <label for="contact-body">Message</label>
-              <textarea id="contact-body" rows="10" required></textarea>
+              <textarea id="contact-body-es" rows="10" required></textarea>
               <button type="submit">
                 <div class="contact-loader" hidden></div>
                 <span class="submit-text">Send</span>
@@ -840,21 +840,21 @@
       flex: 1;
     }
 
-    #contact {
+    .outro .contact-form {
       padding: 16px;
       border-radius: 6px;
       background-color: rgb(255 255 255 / 25%);
     }
 
-    #contact > label {
+    .outro .contact-form > label {
       font-size: 14px;
       font-weight: 500;
       margin-left: 4px;
       text-shadow: 0 1px 4px rgb(0 0 0 / 25%);
     }
 
-    #contact > input,
-    #contact > textarea {
+    .outro .contact-form > input,
+    .outro .contact-form > textarea {
       box-sizing: border-box;
       width: 100%;
       padding: 6px;
@@ -865,11 +865,11 @@
       background-color: rgb(255 255 255 / 35%);
     }
 
-    #contact > textarea {
+    .outro .contact-form > textarea {
       resize: none;
     }
 
-    #contact > button[type=submit] {
+    .outro .contact-form > button[type=submit] {
       float: right;
       width: 60px;
       padding: 5px 10px;
@@ -880,12 +880,12 @@
       background-color: rgb(255 255 255 / 35%);
     }
 
-    #contact > button[type=submit]:hover:not([disabled]) {
+    .outro .contact-form > button[type=submit]:hover:not([disabled]) {
       cursor: pointer;
       background-color: rgb(255 255 255 / 45%);
     }
 
-    #contact > button[type=submit]:active {
+    .outro .contact-form > button[type=submit]:active {
       text-shadow: none;
       background-color: rgb(255 255 255 / 25%) !important;
     }
@@ -997,14 +997,14 @@
       }
     }
 
-    document.querySelector('main[lang=en] .lang-button').onclick = () => {
+    englishMain.querySelector('.lang-button').onclick = () => {
       spanishMain.hidden = false
       setUrlLang('es')
       setBodyShiftStep()
       window.requestAnimationFrame(goToSpanishPage)
     }
 
-    document.querySelector('main[lang=es] .lang-button').onclick = () => {
+    spanishMain.querySelector('.lang-button').onclick = () => {
       englishMain.hidden = false
       setUrlLang('en')
       setBodyShiftStep()
@@ -1049,10 +1049,12 @@
       }
     }
 
-    for (const anchor of document.querySelectorAll('a[href^="#"]')) {
+    for (const anchor of document.querySelectorAll(`a[href^='#']`)) {
       anchor.onclick = ev => {
         ev.preventDefault()
-        document.querySelector(anchor.getAttribute('href')).scrollIntoView({ behavior: 'smooth' })
+        document
+          .querySelector('main:not([hidden]) ' + anchor.getAttribute('href').replace('#', '.'))
+          .scrollIntoView({ behavior: 'smooth' })
       }
     }
   </script>
@@ -1060,9 +1062,9 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     for (const main of [englishMain, spanishMain]) {
-      const contactForm = main.querySelector('#contact')
-      const contactFrom = contactForm.querySelector('#contact-from')
-      const contactBody = contactForm.querySelector('#contact-body')
+      const contactForm = main.querySelector('.contact-form')
+      const contactFrom = contactForm.querySelector('[id^=contact-from]')
+      const contactBody = contactForm.querySelector('[id^=contact-body]')
       const contactSendBtn = contactForm.querySelector('button[type=submit]')
       const contactLoader = contactForm.querySelector('.contact-loader')
       const contactSubmitText = contactForm.querySelector('.submit-text')
